Archive2/74/da88c8a0a55628/output
main.cpp:7:30: error: unknown type name 'string'; did you mean 'std::string'?
    virtual int loadFromFile(string filename) = 0;
                             ^~~~~~
                             std::string
/usr/include/c++/v1/iosfwd:189:65: note: 'std::string' declared here
typedef basic_string<char, char_traits<char>, allocator<char> > string;
                                                                ^
1 error generated.
